# quick-shop-curso

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROMPT_INIT_DEMO.md  README.md  docker-compose.yml  opencode.json  products-images.json
backend/: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  Dockerfile  package.json  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_cart_and_orders.py  0002_cart_and_orders.py  0003_add_reviews_table.py  0003_reviews.py
backend/app/: main.py
backend/app/api/v1/: auth.py  cart.py  orders.py  products.py  reviews.py  test_ai_products.py  users.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  cart.py  order.py  product.py  review.py  user.py
backend/app/schemas/: __init__.py  auth.py  cart.py  order.py  product.py  review.py  user.py
backend/app/seed/: seed.py
backend/app/services/: ai_product_service.py  auth.py  auth_service.py  cart.py  cart_service.py  order.py  order_service.py  product.py  product_service.py  review.py  review_service.py  user.py  user_service.py
backend/src/: app.ts
backend/src/config/: database.ts  jwt.ts
backend/src/middleware/: auth.ts
backend/src/models/: User.ts
backend/src/routes/: auth.ts
backend/src/services/: auth.ts
backend/src/types/: index.ts
backend/src/utils/: password.ts
backend/tests/: conftest.py  test_ai_product.py  test_auth.py  test_cart.py  test_orders.py  test_products.py  test_reviews.py  test_users.py
(+142 files in other folders)
